hub/infra/dispatcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
        - name: dispatcher
          image: romainfd/dispatcher:latest
          volumeMounts:
            - mountPath: /certs/dispatcher.p12
              subPath: dispatcher.p12
              name: dispatcher-p12
            - mountPath: /certs/trustStore
              subPath: trustStore
              name: trust-store
      volumes:
        - name: dispatcher-p12
          secret:
            secretName: dispatcher-p12
        - name: trust-store
          secret:
            secretName: trust-store
